--- a/College Profile Builder/Base.lproj/Main.storyboard
+++ b/College Profile Builder/Base.lproj/Main.storyboard
@@ -65,6 +65,9 @@
                                     <constraint firstAttribute="width" constant="46" id="46y-0F-SZX"/>
                                 </constraints>
                                 <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="onTappedSaveButton:" destination="JEX-9P-axG" eventType="touchUpInside" id="mbT-a1-bQc"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -88,6 +91,12 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="College Details" id="mOI-FS-AaM"/>
+                    <connections>
+                        <outlet property="enrollmentTextField" destination="LWF-xc-nDI" id="bwA-Sh-DDB"/>
+                        <outlet property="imageView" destination="6eK-vu-lKW" id="CeS-L0-W3q"/>
+                        <outlet property="locationTextField" destination="f3Z-od-r3a" id="DC0-oW-Wfp"/>
+                        <outlet property="nameTextField" destination="SZK-Lk-s4g" id="FRi-Se-jQR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
             </objects>
@@ -124,7 +133,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Arm-wq-HPj">
-                                            <rect key="frame" x="16" y="0.0" width="344" height="43.5"/>
+                                            <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
